The final solutions using flex instead of position. cause you know...

--- a/flex-test-styles.css
+++ b/flex-test-styles.css
@@ -49,3 +49,5 @@ body {
   font-size: 1.5rem;
   color: hsl(220, 15%, 55%);
 }
+/* This is my solution for the Qr-code Challenge.
+Thanks for checking it out. Suggestions and hints are always welcome and appreciated. Peace */
