The final solutions using flex instead of position. cause you know...

--- a/flex-test-styles.css
+++ b/flex-test-styles.css
@@ -50,4 +50,4 @@ body {
   color: hsl(220, 15%, 55%);
 }
 /* This is my solution for the Qr-code Challenge.
-Thanks for checking it out. Suggestions and hints are always welcome and appreciated. Peace */
+Thanks for checking it out. Suggestions and hints are always welcome and appreciated. Peace \0/ */
